--- a/story1/page1/index.html
+++ b/story1/page1/index.html
@@ -18,7 +18,7 @@
                 <p>Baymax</p>
                 <div class="content-link">
                     <a href="../index.html">prev</a>
-                    <a href="./page2/index.html">next</a>
+                    <a href="../page2/index.html">next</a>
                 </div>
             </div>
         </section>
