--- a/story1/page2/index.html
+++ b/story1/page2/index.html
@@ -15,7 +15,7 @@
     <main>
         <section>
             <div class="section-content">
-                <p>teen titans</p>
+                <p>robot fight</p>
                 <div class="content-link">
                     <a href="../page1/index.html">prev</a>
                     <a href="../page3/index.html">next</a>
