--- a/story1/page8/index.html
+++ b/story1/page8/index.html
@@ -17,8 +17,8 @@
             <div class="section-content">
                 <p>teen titans</p>
                 <div class="content-link">
-                    <a href="">prev</a>
-                    <a href="">next</a>
+                    <a href="../page7/index.html">prev</a>
+                    <a href="../page9/index.html">next</a>
                 </div>
             </div>
         </section>
