--- a/story1/page10/index.html
+++ b/story1/page10/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teen titans</title>
+    <title>Baymax</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>
-            banana
+            Baymax
         </h1>
     </header>
     <main>
         <section>
             <div class="section-content">
-                <p>teen titans</p>
+                <p>Hiro thought Baymax died but after he saw Baymax's card and was happy</p>
                 <div class="content-link">
-                    <a href="">prev</a>
-                    <a href="./page2/index.html">next</a>
+                    <a href="../page9/index.html">prev</a>
+                    
                 </div>
             </div>
         </section>
