--- a/story1/page8/index.html
+++ b/story1/page8/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teen titans</title>
+    <title>Baymax</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>
-            banana
+            Baymax
         </h1>
     </header>
     <main>
         <section>
             <div class="section-content">
-                <p>teen titans</p>
+                <p>This person was mad and tryed to kill the other person</p>
                 <div class="content-link">
                     <a href="../page7/index.html">prev</a>
                     <a href="../page9/index.html">next</a>
